<resources>
    <string name="app_name">Finite State Machines Max</string>
    <string name="lock_button_text">LOCK</string>
    <string name="unlock_button_text">UNLOCK</string>
    <string name="lockx2_button_text">LOCKx2</string>
    <string name="unlockx2_button_text">UNLOCKx2</string>
    <string name="state">State:</string>
    <string name="armed">Armed</string>
    <string name="disarmed">Disarmed</string>
    <string-array name="alarms_state">
        <item>AlarmArmed_AllLocked</item>
        <item>AlarmDisarmed_AllLocked</item>
        <item>AlarmDisarmed_AllUnlocked</item>
        <item>AlarmDisarmed_DriverUnlocked</item>
    </string-array>
</resources>
